force-app/main/default/objects/Report_Column__c/Report_Column__c.object-meta.xml
<CustomObject>
    <description>Holds information for the Report Columns returned by the DescribeReportInfo API callout</description>
    <label>Report Column</label>
    <nameField>
        <displayFormat>col-{000000}</displayFormat>
        <label>Report Column Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Report Columns</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>