force-app/main/default/objects/Report_Column__c/fields/columnName__c.field-meta.xml
<CustomField>
    <fullName>columnName__c</fullName>
    <externalId>true</externalId>
    <label>columnName</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>