force-app/main/default/objects/Report_Column__c/fields/columnType__c.field-meta.xml
<CustomField>
    <fullName>columnType__c</fullName>
    <label>Report Column Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Detail</fullName>
            </value>
            <value>
                <fullName>Agregate</fullName>
            </value>
            <value>
                <fullName>Grouping</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>