force-app/main/default/objects/Report_Column__c/fields/fieldDatatype__c.field-meta.xml
<CustomField>
    <fullName>fieldDatatype__c</fullName>
    <label>DataType</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>string</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>