force-app/main/default/objects/Report_Column__c/fields/fieldLabel__c.field-meta.xml
<CustomField>
    <fullName>fieldLabel__c</fullName>
    <label>Label</label>
    <length>255</length>
    <type>Text</type>
</CustomField>