force-app/main/default/objects/Report_Column__c/fields/filterable__c.field-meta.xml
<CustomField>
    <fullName>filterable__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Can Filter</label>
    <type>Checkbox</type>
</CustomField>