force-app/main/default/objects/Report_Column__c/fields/reportId__c.field-meta.xml
<CustomField>
    <fullName>reportId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Report</label>
    <referenceTo>Report__c</referenceTo>
    <relationshipLabel>Report Columns</relationshipLabel>
    <relationshipName>Report_Columns</relationshipName>
    <type>Lookup</type>
</CustomField>