force-app/main/default/objects/Report_Column__c/fields/reportTypeId__c.field-meta.xml
<CustomField>
    <fullName>reportTypeId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Report Type</label>
    <referenceTo>Report_Type__c</referenceTo>
    <relationshipLabel>Report Type Columns</relationshipLabel>
    <relationshipName>reportType_Columns</relationshipName>
    <type>Lookup</type>
</CustomField>