force-app/main/default/objects/Report_Column__c/fields/reportTypeSection__c.field-meta.xml
<CustomField>
    <fullName>reportTypeSection__c</fullName>
    <label>Report Section</label>
    <length>255</length>
    <type>Text</type>
</CustomField>