force-app/main/default/objects/Report_Column__c/listViews/All_Report_Columns.listView-meta.xml
<ListView>
    <fullName>All_Report_Columns</fullName>
    <columns>NAME</columns>
    <columns>fieldLabel__c</columns>
    <columns>reportId__c</columns>
    <columns>columnType__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>reportId__c</field>
        <operation>notEqual</operation>
    </filters>
    <label>All Report Columns</label>
</ListView>